# trip-to-rCore-2

./: .gitignore  Dockerfile  Makefile  NOTE.md  README.md
os/: Cargo.toml  Makefile  tmp
os/src/: batch.rs  entry.asm  lang_item.rs  lang_items.rs  linker.ld  main.rs  sbi.rs  stack_trace.rs
os/src/syscall/: mod.rs  task_info.rs
user/: Cargo.toml  Makefile
user/src/: lib.rs  syscall.rs
